kubernetes/llm/llama-cpp-rocm/overlays/workload-prd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-cpp-rocm
  namespace: llm
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-llama-cpp-rocm
  hostnames:
    - "rocm.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: llama-cpp-rocm
          port: 8080
